--- a/_data/blog/2020-02-20-with-code.md
+++ b/_data/blog/2020-02-20-with-code.md
@@ -6,11 +6,15 @@ title: El mejor profesor de álgebra lineal
 thumbnail: /assets/strang-linalg.png
 ---
 
-Gilbert Strang es un profesor de matemáticas del MIT y es más conocido por el curso de álgebra lineal de OCW (OpenCourseWare) que ha atraído a millones de estudiantes en todo el mundo. Gilbert Strang es una persona que es capaz de transmitir su pasión por las matemáticas y al mismo tiempo muestra una habilidad para enseñar conceptos complejos de una foma clara y pausada.
+Gilbert Strang es un profesor de matemáticas del MIT y es más conocido por el curso de álgebra lineal de MIT OpenCourseWare (Linear algebra 18.06) que ha atraído a millones de estudiantes en todo el mundo. En su popular clase que se puede ver a través de Youtube, Gilbert Strang es capaz de transmitir su pasión por las matemáticas y al mismo tiempo mostrar una habilidad especial para enseñar conceptos complejos de una foma clara y pausada. La iniciativa de OpenCourseWare (OCW) tiene como objetivo llevar el conocimento de las mejores universidades gratis a todo el mundo. En la plataforma del MIT hay cerca de 2500 cursos con 500 millones de visitas.
 
-La popularidad de su curso de álgebra lineal está relacionada también con la explosión de aplicaciones de aprendizaje automático y redes neuronales. El curso codificado como 18.06 ha recibido millones de visitas desde que se publicó en 2002.
+Strang recibió su título de doctorado de la Universidad de California en 1959. En los años 70 empezó a enseñar álgebra lineal en el MIT a estudiantes de ciencias, ingeniería, economía y administración. Uno de los secretos de Strand es su forma de enseñar. Al comienzo de cada clase trata de dar un enfoque amplio e intuitivo del tema antes de pasar a una prueba formal. Permanentemente le hace preguntas a los estudiantes para ver si siguen la idea. Y de vez en cuando hace un comentario marginal o cuenta algún chiste.
 
-La iniciativa de OCW tiene como objetivo llevar el conocimento de las mejores universidades gratis a todo el mundo. En la plataforma del MIT hay cerca de 2500 cursos con 500 millones de visitas. La clase de álgebra lineal de Gilbert Strang cubre, entre otros, los siguientes temas:
+Otro curso dado por Gilbert Strang está codificado como 18.065: *"Métodos matriciales en análisis de datos, procesamiento de señales y aprendizaje automático"*.
+
+![Linear Algebra and Learning from Data](/assets/strang-linalg-book.png "Book")
+
+La clase de álgebra lineal de Gilbert Strang cubre, entre otros, los siguientes temas:
 
 * La geometría de la ecuaciones lineales
 * Operaciones con matrices e inversas
