Update blog entries

--- a/_data/blog/2020-02-20-with-code.md
+++ b/_data/blog/2020-02-20-with-code.md
@@ -10,7 +10,7 @@ Gilbert Strang es un profesor de matemáticas del MIT y es más conocido por el 
 
 Strang recibió su título de doctorado de la Universidad de California en 1959. En los años 70 empezó a enseñar álgebra lineal en el MIT a estudiantes de ciencias, ingeniería, economía y administración. Uno de los secretos de Strand es su forma de enseñar. Al comienzo de cada clase trata de dar un enfoque amplio e intuitivo del tema antes de pasar a una prueba formal. Permanentemente le hace preguntas a los estudiantes para ver si siguen la idea. Y de vez en cuando hace un comentario marginal o cuenta algún chiste.
 
-Otro curso dado por Gilbert Strang está codificado como 18.065: *"Métodos matriciales en análisis de datos, procesamiento de señales y aprendizaje automático"*.
+Otro curso dado por Gilbert Strang está codificado como 18.065: *"Métodos matriciales en análisis de datos, procesamiento de señales y aprendizaje automático"*. El libro que acompaña este curso se llama *"Álgebra lineal y aprendizaje a partir de datos"*.
 
 ![Linear Algebra and Learning from Data](/assets/strang-linalg-book.png "Book")
 
